<resources>
    <string name="app_name">Verky</string>
    <string name="login_page_welcome_message">Welcome back!</string>
    <string name="register_page_start_message">Let\'s start by introducing yourself</string>
    <string name="email_input_hint" translatable="false">Email</string>
    <string name="password_input_hint" translatable="false">Password</string>
    <string name="login_button" translatable="false">Login</string>
    <string name="register_message">Don\'t have an account?</string>
    <string name="register_link">Register here</string>
    <string name="name_input_label">Your name</string>
    <string name="full_name_input_hint">Enter your full name</string>
    <string name="birth_input_label">Your birth date</string>
    <string name="day_input_label">Day</string>
    <string name="month_input_label">Month</string>
    <string name="year_input_label">Year</string>
    <string name="gender_input_label">Which gender describes you?</string>
    <string name="gender_input_male">Male</string>
    <string name="gender_input_female">Female</string>
    <string name="email_input_label">Your Email</string>
    <string name="email_input_label2" translatable="false">Email</string>
    <string name="password_input_label">Your Password</string>
    <string name="back_button" translatable="false">Back</string>
    <string name="continue_button" translatable="false">Continue</string>
    <string name="register_button" translatable="false">Register</string>
    <string name="religion_label">What\'s your religion?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="my_information_label">My Information</string>
    <string name="full_name_input_label">Full Name</string>
    <string name="birth_date_input_label">Birth Date</string>
    <string name="gender_input_label2">Gender</string>
    <string name="biometric_login" translatable="false">biometric</string>
    <string name="my_interest_label">My Interests</string>
    <string name="register_my_interest_label">Share some things you think are cool</string>
    <string name="add_pic_label">Add a pic so we can see who you are</string>
    <string name="settings_label">Settings</string>
    <string name="sign_out_button">Sign out</string>
    <string name="notification_label">Notification</string>
    <string name="privacy_label">Privacy</string>
    <string name="receive_notification_label">Receive notification</string>
    <string name="incognito_mode_label">Incognito mode</string>
    <string name="blocked_accounts_label">Blocked accounts</string>
    <string name="application_settings_label">Application settings</string>
    <string name="dark_mode_label">Dark mode</string>
    <string name="register" translatable="false">Register</string>
    <string name="my_height_label">Height(cm)</string>
    <string name="my_height_hint">Input your height</string>
    <string name="there_is_no_notification">There is no notification</string>
</resources>