<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.auth.RegisterActivity"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <TextView
                android:id="@+id/introText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="30dp"
                android:text="@string/my_information_label"
                android:textSize="36sp"
                android:fontFamily="@font/urbanist_bold"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/introText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginVertical="20dp"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/full_name_input_label"
                        android:textSize="18sp"
                        android:fontFamily="@font/urbanist_bold"
                        android:layout_marginBottom="10dp"
                        android:layout_marginHorizontal="30dp"
                        />
                    <EditText
                        android:id="@+id/nameET"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:ems="20"
                        android:background="@drawable/custom_input"
                        android:elevation="5dp"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginBottom="14dp"
                        android:paddingHorizontal="16dp"
                        android:hint="@string/full_name_input_hint"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birth_date_input_label"
                        android:textSize="18sp"
                        android:fontFamily="@font/urbanist_bold"
                        android:layout_marginBottom="10dp"
                        android:layout_marginHorizontal="30dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginHorizontal="30dp"
                        >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"

                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/day_input_label"
                                android:textSize="14sp"
                                android:fontFamily="@font/urbanist_bold"
                                android:layout_marginBottom="10dp"
                                android:layout_marginStart="10dp"
                                />
                            <EditText
                                android:id="@+id/dayDOB"
                                android:layout_width="wrap_content"
                                android:layout_height="50dp"
                                android:ems="4"
                                android:background="@drawable/custom_input"
                                android:elevation="5dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginBottom="14dp"
                                android:hint="DD"
                                android:maxLength="2"
                                android:gravity="center"

                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/month_input_label"
                                android:textSize="14sp"
                                android:fontFamily="@font/urbanist_bold"
                                android:layout_marginBottom="10dp"
                                android:layout_marginStart="10dp"

                                />
                            <EditText
                                android:id="@+id/dayMonth"
                                android:layout_width="wrap_content"
                                android:layout_height="50dp"
                                android:ems="4"
                                android:background="@drawable/custom_input"
                                android:elevation="5dp"
                                android:layout_marginBottom="14dp"
                                android:layout_marginStart="10dp"
                                android:gravity="center"
                                android:maxLength="2"
                                android:hint="MM"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/year_input_label"
                                android:textSize="14sp"
                                android:fontFamily="@font/urbanist_bold"
                                android:layout_marginBottom="10dp"
                                android:layout_marginStart="10dp"
                                />
                            <EditText
                                android:id="@+id/dayYear"
                                android:layout_width="wrap_content"
                                android:layout_height="50dp"
                                android:ems="4"
                                android:background="@drawable/custom_input"
                                android:elevation="10dp"
                                android:layout_marginBottom="14dp"
                                android:layout_marginStart="10dp"
                                android:maxLength="4"
                                android:hint="YYYY"
                                android:gravity="center"
                                />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:orientation="vertical"
                    android:layout_marginVertical="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_input_label2"
                        android:textSize="18sp"
                        android:fontFamily="@font/urbanist_bold"
                        android:layout_marginBottom="10dp"
                        android:layout_marginHorizontal="30dp"
                        />
                    <RadioGroup
                        android:id="@+id/genderRG"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <RadioButton
                            android:id="@+id/MaleRB"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text="@string/gender_input_male"
                            android:layoutDirection="rtl"
                            android:paddingHorizontal="15dp"
                            android:layout_marginHorizontal="30dp"
                            android:elevation="5dp"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/custom_input"
                            android:buttonTint="@color/primary"
                            />
                        <RadioButton
                            android:id="@+id/FemaleRB"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text="@string/gender_input_female"
                            android:layoutDirection="rtl"
                            android:paddingHorizontal="15dp"
                            android:layout_marginHorizontal="30dp"
                            android:layout_marginBottom="15dp"
                            android:elevation="5dp"
                            android:background="@drawable/custom_input"
                            android:buttonTint="@color/primary"
                            />
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_interest_label"
                        android:textSize="18sp"
                        android:fontFamily="@font/urbanist_bold"
                        android:layout_marginBottom="10dp"
                        android:layout_marginHorizontal="30dp"
                        />

                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/continueButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/continue_button"
                android:layout_marginHorizontal="32dp"
                android:background="@drawable/custom_button"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/inputLayout"
                android:layout_marginBottom="32dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/urbanist_bold"

                />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>