<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.auth.RegisterActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <TextView
            android:id="@+id/introText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/my_information_label"
            android:textSize="36sp"
            android:fontFamily="@font/urbanist_bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/introText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginVertical="20dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name_input_label"
                    android:textSize="18sp"
                    android:fontFamily="@font/urbanist_bold"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="30dp"
                    />
                <TextView
                    android:id="@+id/public_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="14dp"
                    android:textSize="16sp"
                    android:text="Full name here"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birth_date_input_label"
                    android:textSize="18sp"
                    android:fontFamily="@font/urbanist_bold"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="30dp"
                    />

                <TextView
                    android:id="@+id/public_birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="14dp"
                    android:textSize="16sp"
                    android:text="Birth date here"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:orientation="vertical"
                android:layout_marginVertical="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_input_label2"
                    android:textSize="18sp"
                    android:fontFamily="@font/urbanist_bold"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="30dp"
                    />
                <TextView
                    android:id="@+id/public_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="14dp"
                    android:textSize="16sp"
                    android:text="Gender here"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_interest_label"
                    android:textSize="18sp"
                    android:fontFamily="@font/urbanist_bold"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="30dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/interest_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>